--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,13 +8,30 @@ on:
     types: [closed]
 
 jobs:
-  deployment:
+  build:
     runs-on: ubuntu-latest
+    
     steps:
     # 1. Depoyu klonlama
     - name: Checkout repository
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
 
     # 2. Docker imajını oluşturma
     - name: Build the Docker image
       run: docker build -t webapp:$(date +%s)
+
+    # 3. Uzak sunucuya SSH ile bağlanma ve Docker işlemleri
+    - name: Deploy to server
+      uses: appleboy/ssh-action@v0.1.6
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SSH_PORT }}
+        script: |
+          # Docker container'ı durdurup kaldır (eğer var ise)
+          docker stop webapp || true
+          docker rm webapp || true
+          
+          # Yeni imajı çalıştırma
+          docker run -d --name webapp -p 5024:5024 webapp:latest
