--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     # 1. Depoyu klonlama
     - name: Checkout repository
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     # 2. Docker imajını oluşturma
     - name: Build the Docker image
